--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/*
+ * Code (c) 2009 Liam Cooke
+ * See LICENSE.txt
+ */
+
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, b, cite, code,
