--- a/iphone.css
+++ b/iphone.css
@@ -10,8 +10,23 @@ body {
     -webkit-text-size-adjust: none;
 }
 
-#footer, hr {
-    display: none;
+#story h2 {
+    font-size: 1.4em;  line-height: 1;
+    margin: 0.7em 0;
+}
+
+#story p {
+    line-height: 1.4;
+    margin: 1em auto 0;
+    min-height: 9.8em;
+}
+
+#button {
+    margin: 1em auto 0;
+}
+
+#footer {
+    font-size: 0.85em;
 }
 
 .amp {
