text-rendering: optimizeLegibility

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
     font: 1em/1.5 'Georgia', serif;
     opacity: 0.5;
     padding: 1.5em;
+    text-rendering: optimizeLegibility;
 }
 
 #body {
